opposed to providing every possible feature like a framework. Thus, a wide range of
minor features have either been removed or refactored. If this broke 
your code, sorry. Some features have been moved to the examples
directory.   If something got removed and you'd like to lobby for its 
return, please submit a bug report. -- Dave

02/14/2020 Modified UniversalEvent to also support asyncio for completness
           with UniversalQueue.  This requires Curio and asyncio to be
           running in separate threads.

02/10/2020 Removed absolute time-related functions wake_at(), timeout_at(),
           and ignore_at().  This kind of functionality (if needed) can
           be reimplemented using the other sleep/timeout functions. 

02/10/2020 Added daemon flag to TaskGroup.spawn().  This can be used
           to create a disregarded task that is ignored for the
           purpose of reporting results, but which is cancelled when
           the TaskGroup goes away. 

02/10/2020 Added spawn_thread() method to TaskGroup.  Can be used
           to create an AsyncThread that's attached to the group.
           AsyncThreads follow the same semantics as tasks.
         
02/09/2020 Removed schedule() function. Use sleep(0). 

02/07/2020 Removed all support for signal handling.  Signal handling,
           by its very nature, is a tricky affair. For instance,
           signals can only be handled in the main execution thread
           and there are all sorts of other issues that can arise 
           when mixed with threads, subprocesses, locks, and other
           things.  Curio already provides all of the necessary support
           to implement signal handling if you rely on UniversalEvent
           or UniversalQueue objects.   Here is a simple example::

               import signal
               import curio

               evt = curio.UniversalEvent()

               def signal_handler(signo, frame):
                   evt.set()
