@@ -1,7 +1,7 @@
 # test_activation.py
 
-from curio.activation import Activation, trap_patch
 from curio import Kernel, sleep, run
+from curio.kernel import Activation
 
 class _TestActivation(Activation):
     def __init__(self):
@@ -18,7 +18,7 @@ class _TestActivation(Activation):
         if task.name.endswith('main'):
             self.events.append('running')
 
-    def suspended(self, task):
+    def suspended(self, task, trap):
         if task.name.endswith('main'):
             self.events.append('suspended')
 
@@ -68,23 +68,3 @@ def test_activation_count():
     # There should be three tasks. main(), an in-kernel task, and a shutdown task
     assert a.events == { 'main', '_kernel_task', '_shutdown_tasks' }
 
-
-class _TestActivationTrapPatch(Activation):
-    def __init__(self):
-        self.events = []
-
-    def activate(self, kernel):
-        # Check if patching works and that arguments were passed correctly
-        @trap_patch(kernel, "trap_sleep")
-        def trap_sleep(*args, trap):
-            self.events.append(trap.__name__)
-            return trap(*args)
-
-def test_activation_trap_patch():
-    async def main():
-        await sleep(0.001)
-        await sleep(0.001)
-
-    a = _TestActivationTrapPatch()
-    run(main, activations=[a])
-    assert a.events == ["trap_sleep" ,"trap_sleep"]
